# oxygine-game

./: .gitignore  .gitmodules  LICENSE  README.md  rename_project.py
my_awesome_game/: gen-atlasses-android(ETC1).bat  gen-atlasses-android(ETC1).sh  gen-atlasses-ios(PVRTC).bat  gen-atlasses-ios(PVRTC).sh  gen-atlasses-low-definition.bat  gen-atlasses-low-definition.sh  gen-atlasses.bat  gen-atlasses.sh
my_awesome_game/data/ui.xml.ox/: meta.xml
my_awesome_game/data/xmls/: ui.xml
my_awesome_game/project/proj.android/: AndroidManifest.xml  ant.properties  build-run.bat  build-run.sh  build.bat  build.gradle  build.sh  build.xml  install.bat  install.sh  project.properties  settings.gradle
my_awesome_game/project/proj.android/gradle/wrapper/: gradle-wrapper.properties
my_awesome_game/project/proj.android/jni/src/: Android.mk
my_awesome_game/project/proj.android/res/values/: strings.xml
my_awesome_game/project/proj.android/src/org/oxygine/MyAwesomeGame/: MainActivity.java
my_awesome_game/project/proj.android/src/org/oxygine/my_awesome_game/: MainActivity.java
my_awesome_game/project/proj.cmake/: CMakeLists.txt  build_emsc.bat  build_emsc.sh  build_emsc_release.bat  build_emsc_release.sh  run.sh
my_awesome_game/project/proj.emscripten/: CMakeLists.txt  build.bat  build_release.bat
my_awesome_game/project/proj.ios/MyAwesomeGame/: MyAwesomeGame_ios-Info.plist
my_awesome_game/project/proj.ios/MyAwesomeGame_ios.xcodeproj/: project.pbxproj
my_awesome_game/project/proj.ios/my_awesome_game_ios.xcodeproj/: project.pbxproj
my_awesome_game/project/proj.macosx/MyAwesomeGame_macosx.xcodeproj/: project.pbxproj
my_awesome_game/project/proj.win32/: MyAwesomeGame.sln  MyAwesomeGame.vcxproj  MyAwesomeGame.vcxproj.filters  my_awesome_game.sln  my_awesome_game.vcxproj
my_awesome_game/project/src/: Game.cpp  GameMenu.cpp  GameMenu.h  GameScene.cpp  GameScene.h  MainMenuScene.cpp  MainMenuScene.h  MyButton.cpp  MyScene.cpp  MyScene.h  Rocket.cpp  Scene.cpp  Scene.h  example.cpp  example.h  res.cpp  res.h
my_awesome_game/project/src/ios/: AppDelegate.h  AppDelegate.mm
